--- a/README.org
+++ b/README.org
@@ -85,11 +85,19 @@
    | 06/30              |          | [[https://leetcode-cn.com/problems/wiggle-subsequence][摆动序列]] /  [[https://leetcode-cn.com/problems/sliding-window-maximum/][239.滑动窗口最大值]]                     | [[https://leetcode-cn.com/problems/ugly-number-iii][丑数 III]] / [[https://leetcode-cn.com/problems/burst-balloons][312.戳气球]]                               | [[https://leetcode-cn.com/problems/the-k-th-lexicographical-string-of-all-happy-strings-of-length-n][长度为 n 的开心字符串中字典序第 k 小的字符串]] /  [[https://leetcode-cn.com/problems/target-sum/][494.目标和]] |       |
    | 06/31              |          | [[https://leetcode-cn.com/problems/teemo-attacking][提莫攻击]] / [[https://leetcode-cn.com/problems/wildcard-matching][44.通配符匹配]]                           | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][301.删除无效的括号]] / [[https://leetcode-cn.com/problems/clone-graph][克隆图]]                         | [[https://leetcode-cn.com/problems/trapping-rain-water/][42.接雨水]] / [[https://leetcode-cn.com/problems/triangle][三角形最小路径和]]                               |       |
    | 新的月份开始啦！   |          |                                                    |                                                     |                                                            |       |
-   | 07/01              |          | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][非递归中序遍历]] / [[https://leetcode-cn.com/problems/is-graph-bipartite][判断二分图]] | [[https://leetcode-cn.com/problems/sort-integers-by-the-power-value][将整数按权重排序]] / [[https://leetcode-cn.com/problems/maximal-rectangle/][最大矩形]] | [[https://leetcode-cn.com/problems/redundant-connection][冗余连接]] / [[https://leetcode-cn.com/problems/count-servers-that-communicate][统计参与通信的服务器]] |       |
-   | 07/02              |          | [[https://leetcode-cn.com/problems/circus-tower-lcci][马戏团人塔]] / [[https://leetcode-cn.com/problems/shortest-path-with-alternating-colors][颜色交替的最短路径]] | [[https://leetcode-cn.com/problems/search-rotate-array-lcci][搜索旋转数组]] / [[https://leetcode-cn.com/problems/valid-permutations-for-di-sequence][DI序列的有效排列]] (二分查找+DP) | [[https://leetcode-cn.com/problems/successor-lcci][后继者]] / [[https://leetcode-cn.com/problems/coin-lcci][硬币]] (DFS+🎒) |       |
-   | 07/03              |          | [[https://leetcode-cn.com/problems/biao-shi-shu-zhi-de-zi-fu-chuan-lcof][表示数值的字符串]] / [[https://leetcode-cn.com/problems/shu-de-zi-jie-gou-lcof][树的子结构]] | [[https://leetcode-cn.com/problems/sum-of-mutated-array-closest-to-target][转变数组后最接近目标值的数组和]] / [[https://leetcode-cn.com/problems/unique-paths-ii][不同路径 II]] | [[https://leetcode-cn.com/problems/word-transformer-lcci][单词转换]] / [[https://leetcode-cn.com/problems/minimum-cost-for-tickets][最低票价]] |       |
-   | 07/04              |          | [[https://leetcode-cn.com/problems/zui-chang-bu-han-zhong-fu-zi-fu-de-zi-zi-fu-chuan-lcof][最长不含重复字符的子字符串]] / [[https://leetcode-cn.com/problems/shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-lcof][数组中数字出现的次数]] | [[https://leetcode-cn.com/problems/powx-n][Pow(x, n)]] / [[https://leetcode-cn.com/problems/unique-substrings-in-wraparound-string][环绕字符串中唯一的子字符串]] | [[https://leetcode-cn.com/problems/time-needed-to-inform-all-employees][通知所有员工所需的时间]] / [[https://leetcode-cn.com/problems/maximum-points-you-can-obtain-from-cards][可获得的最大点数]] |       |
-   | 07/05              |          | [[https://leetcode-cn.com/problems/shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-ii-lcof][数组中数字出现的次数 II]] / [[https://leetcode-cn.com/problems/er-cha-shu-zhong-he-wei-mou-yi-zhi-de-lu-jing-lcof][二叉树中和为某一值的路径]] | [[https://leetcode-cn.com/problems/koko-eating-bananas][爱吃香蕉的珂珂]] / [[https://leetcode-cn.com/problems/robot-in-a-grid-lcci][迷路的机器人]] | [[https://leetcode-cn.com/problems/sum-of-nodes-with-even-valued-grandparent][祖父节点值为偶数的节点和]] / [[https://leetcode-cn.com/problems/target-sum/][494.目标和]] |       |
+   | 07/01              |          | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][非递归中序遍历]] / [[https://leetcode-cn.com/problems/is-graph-bipartite][判断二分图]]                        | [[https://leetcode-cn.com/problems/sort-integers-by-the-power-value][将整数按权重排序]] / [[https://leetcode-cn.com/problems/maximal-rectangle/][最大矩形]]                         | [[https://leetcode-cn.com/problems/redundant-connection][冗余连接]] / [[https://leetcode-cn.com/problems/count-servers-that-communicate][统计参与通信的服务器]]                            |       |
+   | 07/02              |          | [[https://leetcode-cn.com/problems/circus-tower-lcci][马戏团人塔]] / [[https://leetcode-cn.com/problems/shortest-path-with-alternating-colors][颜色交替的最短路径]]                    | [[https://leetcode-cn.com/problems/search-rotate-array-lcci][搜索旋转数组]] / [[https://leetcode-cn.com/problems/valid-permutations-for-di-sequence][DI序列的有效排列]] (二分查找+DP)       | [[https://leetcode-cn.com/problems/successor-lcci][后继者]] / [[https://leetcode-cn.com/problems/coin-lcci][硬币]] (DFS+🎒)                                     |       |
+   | 07/03              |          | [[https://leetcode-cn.com/problems/biao-shi-shu-zhi-de-zi-fu-chuan-lcof][表示数值的字符串]] / [[https://leetcode-cn.com/problems/shu-de-zi-jie-gou-lcof][树的子结构]]                      | [[https://leetcode-cn.com/problems/sum-of-mutated-array-closest-to-target][转变数组后最接近目标值的数组和]] / [[https://leetcode-cn.com/problems/unique-paths-ii][不同路径 II]]        | [[https://leetcode-cn.com/problems/word-transformer-lcci][单词转换]] / [[https://leetcode-cn.com/problems/minimum-cost-for-tickets][最低票价]]                                        |       |
+   | 07/04              |          | [[https://leetcode-cn.com/problems/zui-chang-bu-han-zhong-fu-zi-fu-de-zi-zi-fu-chuan-lcof][最长不含重复字符的子字符串]] / [[https://leetcode-cn.com/problems/shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-lcof][数组中数字出现的次数]]  | [[https://leetcode-cn.com/problems/powx-n][Pow(x, n)]] / [[https://leetcode-cn.com/problems/unique-substrings-in-wraparound-string][环绕字符串中唯一的子字符串]]              | [[https://leetcode-cn.com/problems/time-needed-to-inform-all-employees][通知所有员工所需的时间]] / [[https://leetcode-cn.com/problems/maximum-points-you-can-obtain-from-cards][可获得的最大点数]]                  |       |
+   | 07/05              |          | [[https://leetcode-cn.com/problems/shu-zu-zhong-shu-zi-chu-xian-de-ci-shu-ii-lcof][数组中数字出现的次数 II]] / [[https://leetcode-cn.com/problems/er-cha-shu-zhong-he-wei-mou-yi-zhi-de-lu-jing-lcof][二叉树中和为某一值的路径]] | [[https://leetcode-cn.com/problems/koko-eating-bananas][爱吃香蕉的珂珂]] / [[https://leetcode-cn.com/problems/robot-in-a-grid-lcci][迷路的机器人]]                       | [[https://leetcode-cn.com/problems/sum-of-nodes-with-even-valued-grandparent][祖父节点值为偶数的节点和]] / [[https://leetcode-cn.com/problems/target-sum/][494.目标和]]                      |       |
+   | 🐛   🐛🐛          |          |                                                    |                                                     |                                                            |       |
+   | 07/06              |          | [[https://leetcode-cn.com/problems/two-sum/][两数之和]] /[[https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/][无重复字符的最长子串]]                     | [[https://leetcode-cn.com/problems/maximum-length-of-pair-chain][最长数对链]] /[[https://leetcode-cn.com/problems/maximum-length-of-repeated-subarray][最长重复子数组]]                          | [[https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/][17. 电话号码的字母组合]]/ [[https://leetcode-cn.com/problems/predict-the-winner][预测赢家]]                           |       |
+   | 07/07              |          | [[https://leetcode-cn.com/problems/zigzag-conversion][Z 字形变换]]  /  [[https://leetcode-cn.com/problems/reverse-integer][整数反转]]                            | [[https://leetcode-cn.com/problems/bomb-enemy][轰炸敌人]] /  [[https://leetcode-cn.com/problems/wiggle-subsequence][摆动序列]]                                | [[https://leetcode-cn.com/problems/surrounded-regions/][130.被围绕的区域]]/  [[https://leetcode-cn.com/problems/clone-graph][克隆图]]                                  |       |
+   | 07/08              |          | [[https://leetcode-cn.com/problems/string-to-integer-atoi][字符串转换整数 (atoi)]] /[[https://leetcode-cn.com/problems/palindrome-number][回文数]]                      | [[https://leetcode-cn.com/problems/ugly-number-ii][丑数 II]]  /  [[https://leetcode-cn.com/problems/ugly-number-iii][丑数 III]]                                | [[https://leetcode-cn.com/problems/binary-tree-right-side-view/][199.二叉树的右视图]]/  [[https://leetcode-cn.com/problems/reverse-linked-list][206.反转链表]]                          |       |
+   | 07/09              |          | [[https://leetcode-cn.com/problems/integer-to-roman][整数转罗马数字]] /  [[https://leetcode-cn.com/problems/roman-to-integer][罗马数字转整数]]                   | [[https://leetcode-cn.com/problems/minimum-score-triangulation-of-polygon][多边形三角剖分的最低得分]] /  [[https://leetcode-cn.com/problems/permutations/][46. 全排列]]              | [[https://leetcode-cn.com/problems/linked-list-cycle-lcci][环路检测]]   /[[https://leetcode-cn.com/problems/remove-zero-sum-consecutive-nodes-from-linked-list][ 从链表中删去总和值为零的连续节点]]              |       |
+   | 07/10              |          | [[https://leetcode-cn.com/problems/longest-common-prefix][最长公共前缀]]  /[[https://leetcode-cn.com/problems/4sum][四数之和]]                            | [[https://leetcode-cn.com/problems/delete-and-earn][删除与获得点数]]    /  [[https://leetcode-cn.com/problems/product-of-array-except-self/][238. 除自身以外数组的乘积]]      | [[https://leetcode-cn.com/problems/fu-za-lian-biao-de-fu-zhi-lcof/][复杂链表的复制]] /  [[https://leetcode-cn.com/problems/sort-list][148.排序链表]]                             |       |
+   | 07/11              |          | [[https://leetcode-cn.com/problems/valid-parentheses][有效的括号]]   /[[https://leetcode-cn.com/problems/swap-nodes-in-pairs][两两交换链表中的节点]]                 | [[https://leetcode-cn.com/problems/friend-circles][朋友圈]]   /  [[https://leetcode-cn.com/problems/out-of-boundary-paths][576.出界的路径数]]                        | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][121.买卖股票的最佳时机]]   /  [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][309.最佳买卖股票时机含冷冻期]]   |       |
+   | 07/12              |          | [[https://leetcode-cn.com/problems/reverse-nodes-in-k-group][K 个一组翻转链表]] /[[https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array][删除排序数组中的重复项]]           | [[https://leetcode-cn.com/problems/smallest-string-starting-from-leaf][从叶结点开始的最小字符串]]  /  [[https://leetcode-cn.com/problems/course-schedule][207.课程表]]             | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][123.买卖股票的最佳时机 III]]/ [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iv/][188. 买卖股票的最佳时机 IV]]     |       |
 ** 🧠解题思路
 *** 题目列表
 **** 动态规划
