--- a/README.org
+++ b/README.org
@@ -155,6 +155,7 @@
     * [[file:/coding/814_二叉树剪枝.org][814.二叉树剪枝✌️]]
     * [[file:./coding/面试题04.06.后继者.py][面试题04.06.后继者]]➕
     * [[file:./coding/🌲的子结构.org][🌲的字结构😭]]
+    * [[file:./coding/二叉树中路径总和.org][二叉树中路径总和]]
 **** 前缀树Trie
     * [[file:./coding/208_实现Trie(前缀树).py][208.实现Trie(前缀树)]]➕
 **** 数组
