--- a/README.org
+++ b/README.org
@@ -121,6 +121,7 @@
      * [[file:./coding/322_零钱兑换.org][322.零钱兑换]]
      * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
      * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
+     * [[file:/coding/467_环绕字符串中唯一的子字符串.org][467.环绕字符串中唯一的子字符串]]
      * [[file:./coding/474_一和零.py][474.一和零😢]]
      * [[file:./coding/494_目标和.org][494.目标和]]🌟🌟
      * [[file:./coding/迷路的机器人.org][迷路的机器人]]
@@ -252,6 +253,7 @@
     * [[file:/coding/162_寻找峰值.org][162.寻找峰值🐶]]
     * [[file:/coding/287_寻找重复数.org][287.寻找重复数]]😁
     * [[file:./coding/378_有序矩阵中第K小的元素.org][378.有序矩阵中第K小的元素]]😭
+    * [[file:/coding/875_爱吃香蕉的珂珂.org][875.爱吃香蕉的珂珂]]💪
     * [[file:/coding/1201_丑数III.org][1201.丑数III]]
 **** 递归
     * [[file:./coding/29_两数相除.py][29.两数相除]]😢
