--- a/README.org
+++ b/README.org
@@ -204,6 +204,7 @@
 **** 三指针
     * [[file:/coding/15_三数之和.org][15.三数之和]]
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
+    * [[file:/coding/264_丑数II.org][264.丑数II]]
 **** 字符串
     * [[file:/coding/838_推多米诺.org][838.推多米诺]]
     * [[file:./coding/49_字母异位词分组.py][49.字母异位词分组]]➕
