--- a/README.org
+++ b/README.org
@@ -238,6 +238,7 @@
     * [[file:/coding/22_括号生成.org][22.括号生成]]😁
     * [[file:./coding/130_被围绕的区域.org][130.被围绕的区域😭]]
     * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
+    * [[file:/coding/361_轰炸敌人.org][361.轰炸敌人]]
     * [[file:./coding/417_太平洋大西洋水流问题.py][417.太平洋大西洋水流问题]]👖
     * [[file:/coding/486_预测赢家.org][486.预测赢家.org]]
     * [[file:./coding/576_出界的路径数.org][576.出界的路径数]]
