--- a/README.org
+++ b/README.org
@@ -161,10 +161,11 @@
     * [[file:./coding/1339_分裂二叉树的最大乘积.py][1339.分裂二叉树的最大乘积]]🉑️
     * [[file:./coding/655_输出二叉树.org][655.输出二叉树]]
     * [[file:./coding/572_另一个🌲的子🌲.org][572.另一个🌲的子🌲]]
-    * [[file:./coding/面试题04.10.检查子树.py][面试题04.10.检查子树➕]]
-    * [[file:./coding/968_监控二叉树.py][968.监控二叉树]]😭
+    * [[file:/coding/740_删除与获得点数.org][740.删除与获得点数]]
     * [[file:/coding/814_二叉树剪枝.org][814.二叉树剪枝✌️]]
+    * [[file:./coding/968_监控二叉树.py][968.监控二叉树]]😭
     * [[file:./coding/面试题04.06.后继者.py][面试题04.06.后继者]]➕
+    * [[file:./coding/面试题04.10.检查子树.py][面试题04.10.检查子树➕]]
     * [[file:./coding/🌲的子结构.org][🌲的字结构😭]]
     * [[file:./coding/二叉树中路径总和.org][二叉树中路径总和]]
 **** 前缀树Trie
