--- a/README.org
+++ b/README.org
@@ -243,6 +243,7 @@
     * [[file:/coding/361_轰炸敌人.org][361.轰炸敌人]]
     * [[file:./coding/417_太平洋大西洋水流问题.py][417.太平洋大西洋水流问题]]👖
     * [[file:/coding/486_预测赢家.org][486.预测赢家.org]]
+    * [[file:/coding/547_朋友圈.org][547.朋友圈]]
     * [[file:./coding/576_出界的路径数.org][576.出界的路径数]]
     * [[file:/coding/695_岛屿的最大面积.py][695.岛屿的最大面积😁]]
     * [[file:./coding/1415.长度为n的开心字符串中字典序第k小的字符串.py][1415.长度为n的开心字符串中字典序第k小的字符串]]➕
