--- a/README.org
+++ b/README.org
@@ -210,6 +210,8 @@
 **** 字符串
     * [[file:/coding/838_推多米诺.org][838.推多米诺]]
     * [[file:./coding/49_字母异位词分组.py][49.字母异位词分组]]➕
+    * [[file:./coding/3_无重复字符的最长子串.org][3. 无重复字符的最长子串]]
+    * [[file:./coding/7_整数反转.org][7. 整数反转]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
@@ -228,6 +230,7 @@
     * [[file:/coding/206_反转链表.org][206.反转链表]]
     * [[file:/coding/142_环形链表II.py][面试题_环路检测]]
     * [[file:./coding/面试题35复杂链表的复制.py][面试题35复杂链表的复制]]
+    * [[file:./coding/两两交换链表节点.org][带指针的节点的翻转]]
 **** BFS
     * [[file:./coding/127_单词接龙.py][127.单词接龙]]👖
     * [[file:/coding/133_克隆图.org][133.克隆图]]
