--- a/README.org
+++ b/README.org
@@ -211,7 +211,7 @@
     * [[file:/coding/838_推多米诺.org][838.推多米诺]]
     * [[file:./coding/49_字母异位词分组.py][49.字母异位词分组]]➕
     * [[file:./coding/3_无重复字符的最长子串.org][3. 无重复字符的最长子串]]
-    * [[file:./coding/7_整数反转.org][7. 整数反转]]
+    * [[file:./coding/7_整数反转.org][7. 字符串和整数互相转换]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
