--- a/README.org
+++ b/README.org
@@ -178,6 +178,7 @@
 **** 前缀树Trie
     * [[file:./coding/208_实现Trie(前缀树).py][208.实现Trie(前缀树)]]➕
 **** 数组
+    * [[file:./coding/1_两数之和.org][1. 两数之和]]
     * [[file:/coding/31_下一个排列.py][31.下一个排列]]
     * [[file:/coding/36_有效的数独.org][36.有效的数独]]
     * [[file:/coding/48_旋转图像.org][48.旋转图像]]
@@ -193,12 +194,9 @@
     * [[file:/coding/1267_统计参与通信的服务器.org][1267.统计参与通信的服务器]]😁
     * [[file:/coding/1387_将整数按权重排序.org][1387.将整数按权重排序]]😁
     * [[file:/coding/2出现的次数.org][面试题_2出现的次数]]🤒️
-    * [[file:./coding/384_打乱数组.org][384.打乱数组]]
-    * [[file:./coding/268_缺失数字.org][268.缺失数字]]
-    * [[file:./coding/134_加油站.org][134.⛽️]]
     * [[file:./coding/零矩阵.org][零矩阵]]
     * [[file:/coding/面试题_主要元素.org][面试题_主要元素-摩尔投票法]]
-    * [[file:./coding/1_两数之和.org][1. 两数之和]]
+    * [[file:/coding/峰与谷.org][面试题10.11.峰与谷]]
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
