--- a/README.org
+++ b/README.org
@@ -217,6 +217,9 @@
     * [[file:./coding/49_字母异位词分组.py][49.字母异位词分组]]➕
     * [[file:./coding/3_无重复字符的最长子串.org][3. 无重复字符的最长子串]]
     * [[file:./coding/7_整数反转.org][7. 字符串和整数互相转换]]
+    * [[file:./coding/9_回文数.org][9.回文数]] -> 回文链表
+    * [[file:./coding/罗马数和整数转换.org][罗马书和整数]]
+    * [[file:./coding/14_最长公共前缀.org][14. 最长公共前缀]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
