--- a/README.org
+++ b/README.org
@@ -283,7 +283,8 @@
 **** 回溯法
     * [[file:/coding/39_组合总数.org][39.组合总数]]
     * [[file:/coding/40_组合总和II.org][40.组合总和II]]
-    *x [[file:/coding/698_划分为k个相等的子集.org][698.划分为k个相等的子集]]🍺
+    * [[file:/coding/698_划分为k个相等的子集.org][698.划分为k个相等的子集]]🍺
+    * [[file:./coding/组合总数.org][电话号码的组合系列]]
 **** 哈希表
     * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
     * [[file:./coding/454_四数相加II.py][454.四数相加II]]➕
