--- a/README.org
+++ b/README.org
@@ -203,11 +203,12 @@
      + [[file:/coding/16_最接近的三数之和.py][16.最接近的三数之和]]😁
      + [[file:./coding/160_相交链表.org][160.相交链表]]
      + [[file:./coding/234_回文链表.py][234.回文链表]]😼
+     + [[file:./coding/283_移动零.py][283.移动零🐸]]
      + [[file:./coding/344_反转字符串.py][344.反转字符串😊]]
      + [[file:/coding/345_反转字符串中的元音字母.py][345.反转字符串中的元音字母]]
      + [[file:./coding/分割链表.org][分割链表]]
      + [[file:/coding/一次编辑.org][面试题_一次编辑]]
-     + [[file:./coding/283_移动零.py][283.移动零🐸]]
+     + [[file:/coding/分割链表.org][面试题02.04.分割链表]]
 **** 三指针
     * [[file:/coding/15_三数之和.org][15.三数之和]]
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
