--- a/README.org
+++ b/README.org
@@ -282,6 +282,7 @@
     * [[file:/coding/1140_石子游戏II.org][1140.石子游戏 II]]😭
     * [[file:./coding/1171_从链表中删去总和值为零的连续节点.py][1171.从链表中删去总和值为零的连续节点]]👀
     * [[file:./coding/794_有效的井字游戏.py][794.有效的井字游戏👖]]
+    * [[file:/coding/求和路径.org][面试题04.12.求和路径]]
 **** 回溯法
     * [[file:/coding/39_组合总数.org][39.组合总数]]
     * [[file:/coding/40_组合总和II.org][40.组合总和II]]
