--- a/README.org
+++ b/README.org
@@ -241,6 +241,7 @@
     * [[file:/coding/142_环形链表II.py][面试题_环路检测]]
     * [[file:./coding/面试题35复杂链表的复制.py][面试题35复杂链表的复制]]
     * [[file:./coding/两两交换链表节点.org][带指针的节点的翻转]]
+    * [[file:/coding/链表求和.org][面试题02.05.链表求和]]
 **** BFS
     * [[file:./coding/127_单词接龙.py][127.单词接龙]]👖
     * [[file:/coding/133_克隆图.org][133.克隆图]]
