--- a/README.org
+++ b/README.org
@@ -209,6 +209,7 @@
      + [[file:./coding/分割链表.org][分割链表]]
      + [[file:/coding/一次编辑.org][面试题_一次编辑]]
      + [[file:/coding/分割链表.org][面试题02.04.分割链表]]
+     + [[file:./coding/26_删除排序数组中的重复项.org][26. 删除排序数组中的重复项]]
 **** 三指针
     * [[file:/coding/15_三数之和.org][15.三数之和]]
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
