--- a/README.org
+++ b/README.org
@@ -210,6 +210,7 @@
      + [[file:/coding/一次编辑.org][面试题_一次编辑]]
      + [[file:/coding/分割链表.org][面试题02.04.分割链表]]
      + [[file:./coding/26_删除排序数组中的重复项.org][26. 删除排序数组中的重复项]]
+     + [[file:/coding/部分排序.org][面试题16.16.部分排序]]
 **** 三指针
     * [[file:/coding/15_三数之和.org][15.三数之和]]
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
@@ -278,6 +279,7 @@
     * [[file:./coding/378_有序矩阵中第K小的元素.org][378.有序矩阵中第K小的元素]]😭
     * [[file:/coding/875_爱吃香蕉的珂珂.org][875.爱吃香蕉的珂珂]]💪
     * [[file:/coding/1201_丑数III.org][1201.丑数III]]
+    * [[file:/coding/最小差.org][面试题16.06.最小差]]
 **** 递归
     * [[file:./coding/29_两数相除.py][29.两数相除]]😢
     * [[file:./coding/638_大礼包.py][638.大礼包]]
