--- a/README.org
+++ b/README.org
@@ -224,6 +224,7 @@
     * [[file:./coding/罗马数和整数转换.org][罗马书和整数]]
     * [[file:./coding/14_最长公共前缀.org][14. 最长公共前缀]]
     * [[file:./coding/括号匹配问题.org][括号匹配问题]]
+    * [[file:/coding/计算器.org][面试题16.26.计算器]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
