--- a/README.org
+++ b/README.org
@@ -147,6 +147,7 @@
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
      * [[file:./coding/迷路的机器人.org][迷路的机器人]]
      * [[file:./coding/🎪人塔.org][🎪人塔🌧️]]
+     * [[file:./coding/把数字翻译成字符串.py][把数字翻译成字符串➕]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -175,6 +176,7 @@
     * [[file:./coding/面试题04.10.检查子树.py][面试题04.10.检查子树➕]]
     * [[file:./coding/🌲的子结构.org][🌲的字结构😭]]
     * [[file:./coding/二叉树中路径总和.org][二叉树中路径总和]]
+    * [[file:./coding/从上到下打印二叉树.py][从上到下打印二叉树]]
 **** 前缀树Trie
     * [[file:./coding/208_实现Trie(前缀树).py][208.实现Trie(前缀树)]]➕
 **** 数组
@@ -232,6 +234,7 @@
     * [[file:./coding/85_最大矩形.org][85.最大矩形]]😭
     * [[file:./coding/394_字符串解码.py][394.字符串解码😯]]
     * [[file:/coding/739_每日温度.org][739.每日温度]]✌️
+    * [[file:./coding/栈的压入弹出序列.py][栈的压入弹出序列]]👖
 **** 链表
     * [[file:./coding/2_两数相加.py][2.两数相加]]😜
     * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
@@ -265,6 +268,9 @@
     * [[file:/coding/695_岛屿的最大面积.py][695.岛屿的最大面积😁]]
     * [[file:./coding/1415.长度为n的开心字符串中字典序第k小的字符串.py][1415.长度为n的开心字符串中字典序第k小的字符串]]➕
     * [[file:./coding/面试题17.22.单词转换.py][面试题17.22.单词转换👖]]
+    * [[file:./coding/字符串的排列.py][字符串的排列]]
+    * [[file:./coding/机器人的运动范围.py][机器人的运动范围]]
+    * [[file:./coding/矩阵中的路径.py][矩阵中的路径]]
 **** 拓扑排序
     * [[file:./coding/207_课程表.py][207.课程表]]
     * [[file:./coding/802_找到最终的安全状态.py][802.找到最终的安全状态]]👖
@@ -281,6 +287,7 @@
     * [[file:/coding/875_爱吃香蕉的珂珂.org][875.爱吃香蕉的珂珂]]💪
     * [[file:/coding/1201_丑数III.org][1201.丑数III]]
     * [[file:/coding/最小差.org][面试题16.06.最小差]]
+    * [[file:./coding/数值的整数次方.py][数值的整数次方➕]]
 **** 递归
     * [[file:./coding/29_两数相除.py][29.两数相除]]😢
     * [[file:./coding/638_大礼包.py][638.大礼包]]
@@ -313,6 +320,12 @@
     * [[file:./coding/剑指Offer56-I.数组中数字出现的次数.py][剑指Offer56-I.数组中数字出现的次数🐱]]
 **** 数学推导
     * [[file:/coding/剪绳子.org][剪绳子]]✌️
+    * [[file:./coding/数字序列中某一位的数字.py][数字序列中某一位的数字😢]]
+    * [[file:./coding/剪绳子2.py][剪绳子2😢]]
+**** 双端队列
+    * [[file:./coding/队列的最大值.py][队列的最大值😢]]
+**** 整数出现的次数 
+    *  [[file:./coding/1～n整数中1出现的次数.py][1～n整数中1出现的次数]]👖
 **** 其他
     * [[file:/coding/166_分数到小数.org][166.分数到小数]]
     * [[file:/coding/326_3的幂.org][326.3的幂]]
