--- a/README.org
+++ b/README.org
@@ -283,6 +283,7 @@
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
     + [[file:./coding/最小k个数.org][最小k个数]]
+    + [[file:/coding/数据流中的中位数.org][剑指Offer41.数据流中的中位数]]
 **** 双向队列
     * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
 **** 二分查找
@@ -336,6 +337,7 @@
     * [[file:/coding/166_分数到小数.org][166.分数到小数]]
     * [[file:/coding/326_3的幂.org][326.3的幂]]
     * [[file:./coding/220_存在重复元素III.py][220.存在重复元素III（桶）]]
+    * [[file:/coding/表示数值的字符串.org][剑指Offer20.表示数值的字符串]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
