--- a/README.org
+++ b/README.org
@@ -185,6 +185,7 @@
     * [[file:./coding/🌲的子结构.org][🌲的字结构😭]]
     * [[file:./coding/二叉树中路径总和.org][二叉树中路径总和]]
     * [[file:./coding/从上到下打印二叉树.py][从上到下打印二叉树]]
+    * [[file:/coding/二叉搜索树的最近公共祖先.org][面试题68.二叉搜索树的最近公共祖先]]
 **** 前缀树Trie
     * [[file:./coding/208_实现Trie(前缀树).py][208.实现Trie(前缀树)]]➕
 **** 数组
@@ -207,6 +208,7 @@
     * [[file:./coding/零矩阵.org][零矩阵]]
     * [[file:/coding/面试题_主要元素.org][面试题_主要元素-摩尔投票法]]
     * [[file:/coding/峰与谷.org][面试题10.11.峰与谷]]
+    * [[file:/coding/扑克牌中的顺子.org][剑指Offer61.扑克牌中的顺子]]
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
@@ -226,16 +228,17 @@
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
     * [[file:/coding/264_丑数II.org][264.丑数II]]
 **** 字符串
-    * [[file:/coding/838_推多米诺.org][838.推多米诺]]
-    * [[file:./coding/49_字母异位词分组.py][49.字母异位词分组]]➕
     * [[file:./coding/3_无重复字符的最长子串.org][3. 无重复字符的最长子串]]
     * [[file:./coding/7_整数反转.org][7. 字符串和整数互相转换]]
     * [[file:./coding/9_回文数.org][9.回文数]] -> 回文链表
-    * [[file:./coding/罗马数和整数转换.org][罗马书和整数]]
     * [[file:./coding/14_最长公共前缀.org][14. 最长公共前缀]]
+    * [[file:./coding/30_串联所有单词的子串.org][30.串联所有单词的子串]]
+    * [[file:./coding/49_字母异位词分组.py][49.字母异位词分组]]➕
+    * [[file:/coding/838_推多米诺.org][838.推多米诺]]
+    * [[file:./coding/罗马数和整数转换.org][罗马书和整数]]
     * [[file:./coding/括号匹配问题.org][括号匹配问题]]
     * [[file:/coding/计算器.org][面试题16.26.计算器]]
-    * [[file:./coding/30_串联所有单词的子串.org][30.串联所有单词的子串]]
+    * [[file:/coding/把字符串转换成整数.org][剑指Offer67.把字符串转换成整数]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
