--- a/README.org
+++ b/README.org
@@ -239,6 +239,7 @@
     * [[file:./coding/括号匹配问题.org][括号匹配问题]]
     * [[file:/coding/计算器.org][面试题16.26.计算器]]
     * [[file:/coding/把字符串转换成整数.org][剑指Offer67.把字符串转换成整数]]
+    * [[file:/coding/翻转单词顺序.org][翻转单词顺序]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
@@ -333,10 +334,13 @@
     * [[file:./coding/剑指Offer56-I.数组中数字出现的次数.py][剑指Offer56-I.数组中数字出现的次数🐱]]
 **** 数学推导
     * [[file:/coding/剪绳子.org][剪绳子]]✌️
-    * [[file:./coding/数字序列中某一位的数字.py][数字序列中某一位的数字😢]]
     * [[file:./coding/剪绳子2.py][剪绳子2😢]]
+    * [[file:./coding/数字序列中某一位的数字.py][数字序列中某一位的数字😢]]
+    * [[file:/coding/数值的整数次方.org][数值的整数次方]]
 **** 双端队列
     * [[file:./coding/队列的最大值.py][队列的最大值😢]]
+**** 滑动窗口
+    * [[file:/coding/和为s的连续正数序列.org][剑指Offer57-II.和为s的连续正数序列]]
 **** 整数出现的次数 
     *  [[file:./coding/1～n整数中1出现的次数.py][1～n整数中1出现的次数]]👖
 **** 其他
