--- a/README.org
+++ b/README.org
@@ -156,6 +156,7 @@
      * [[file:./coding/迷路的机器人.org][迷路的机器人]]
      * [[file:./coding/🎪人塔.org][🎪人塔🌧️]]
      * [[file:./coding/把数字翻译成字符串.py][把数字翻译成字符串➕]]
+     * [[file:./coding/n个骰子的点数.py][n个骰子的点数😢]]
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -186,6 +187,7 @@
     * [[file:./coding/二叉树中路径总和.org][二叉树中路径总和]]
     * [[file:./coding/从上到下打印二叉树.py][从上到下打印二叉树]]
     * [[file:/coding/二叉搜索树的最近公共祖先.org][面试题68.二叉搜索树的最近公共祖先]]
+    * [[file:./coding/二叉搜索树的后序遍历序列.py][二叉搜索树的后序遍历序列😢]]
 **** 前缀树Trie
     * [[file:./coding/208_实现Trie(前缀树).py][208.实现Trie(前缀树)]]➕
 **** 数组
@@ -224,6 +226,8 @@
      + [[file:/coding/分割链表.org][面试题02.04.分割链表]]
      + [[file:./coding/26_删除排序数组中的重复项.org][26. 删除排序数组中的重复项]]
      + [[file:/coding/部分排序.org][面试题16.16.部分排序]]
+     + [[file:./coding/和为s的两个数字.py][和为s的两个数字➕]]
+     + [[file:./coding/最长不含重复字符的子字符串.py][最长不含重复字符的子字符串➕]]
 **** 三指针
     * [[file:/coding/15_三数之和.org][15.三数之和]]
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
@@ -310,6 +314,7 @@
     * [[file:./coding/1171_从链表中删去总和值为零的连续节点.py][1171.从链表中删去总和值为零的连续节点]]👀
     * [[file:./coding/794_有效的井字游戏.py][794.有效的井字游戏👖]]
     * [[file:/coding/求和路径.org][面试题04.12.求和路径]]
+    * [[file:./coding/树的子结构.py][树的子结构➕]]
 **** 回溯法
     * [[file:/coding/39_组合总数.org][39.组合总数]]
     * [[file:/coding/40_组合总和II.org][40.组合总和II]]
@@ -338,6 +343,11 @@
     * [[file:./coding/剪绳子2.py][剪绳子2😢]]
     * [[file:./coding/数字序列中某一位的数字.py][数字序列中某一位的数字😢]]
     * [[file:/coding/数值的整数次方.org][数值的整数次方]]
+    * [[file:./coding/圆圈中最后剩下的数字.py][圆圈中最后剩下的数字]]➕
+    * [[file:./coding/求1+2+…+n.py][求1+2+…+n ➕]]
+    * [[file:./coding/不用加减乘除做加法.py][不用加减乘除做加法➕]]
+    * [[file:./coding/构建乘积数组.py][构建乘积数组➕]]
+    * [[file:./coding/数组中数字出现的次数 II.py][数组中数字出现的次数 II😢]]
 **** 双端队列
     * [[file:./coding/队列的最大值.py][队列的最大值😢]]
 **** 滑动窗口
@@ -349,6 +359,7 @@
     * [[file:/coding/326_3的幂.org][326.3的幂]]
     * [[file:./coding/220_存在重复元素III.py][220.存在重复元素III（桶）]]
     * [[file:/coding/表示数值的字符串.org][剑指Offer20.表示数值的字符串]]
+    * [[file:./coding/把数组排成最小的数.py][把数组排成最小的数]]➕
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
