--- a/README.org
+++ b/README.org
@@ -212,6 +212,7 @@
     * [[file:/coding/峰与谷.org][面试题10.11.峰与谷]]
     * [[file:/coding/扑克牌中的顺子.org][剑指Offer61.扑克牌中的顺子]]
     * [[file:/coding/顺时针打印矩阵.org][剑指Offer29.顺时针打印矩阵]]
+    * [[file:./coding/最大最小排列.org][最大最小排列]]
 **** 双指针
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
