--- a/README.org
+++ b/README.org
@@ -246,6 +246,7 @@
     * [[file:/coding/计算器.org][面试题16.26.计算器]]
     * [[file:/coding/把字符串转换成整数.org][剑指Offer67.把字符串转换成整数]]
     * [[file:/coding/翻转单词顺序.org][翻转单词顺序]]
+    * [[file:./coding/字符串运算.org][字符串运算]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
