--- a/README.org
+++ b/README.org
@@ -1,5 +1,6 @@
 *   Git加速插件：[[https://chrome.google.com/webstore/detail/github%E5%8A%A0%E9%80%9F/mfnkflidjnladnkldfonnaicljppahpg][GitHub加速😊]]
 * 🔧Emacs工具篇
+本项目内容开发及维护基于Emacs!
 ** 常用快捷键(ctrl-c; alt-m)
    | 功能                      | 快捷键                               |
    | 新建文件or打开文件        | c-x c-f                              |
@@ -158,7 +159,6 @@
      * [[file:/coding/983_最低票价.org][983.最低票价]]😁
      * [[file:./coding/1155_掷骰子的N种方法.py][1155.掷骰子的N种方法😢]]
      * [[file:/coding/1186_删除一次得到子数组最大和.org][1186.删除一次得到子数组最大和]]😭基础版:[[https://leetcode-cn.com/problems/maximum-subarray/][53. 最大子序和]]
-     * [[file:/coding/983_最低票价.org][983.最低票价]]😁
      * [[file:./coding/1406_石子游戏3.py][ 1406.石子游戏3😭]]
      * [[file:./coding/面试题17_23_最大黑方阵.py][面试题17_23_最大黑方阵]]😢
      * [[file:./coding/迷路的机器人.org][迷路的机器人]]
@@ -181,14 +181,14 @@
     * [[file:./coding/297_二叉树的序列化与反序列化.py][297.二叉树序列化和反序列化]]😢
     * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
     * [[file:./coding/543_二叉树的直径.py][543.二叉树的直径😊]]
-    * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
-    * [[file:./coding/1372_二叉树中的最长交错路径.py][1372.二叉树中的最长交错路径]]👖
-    * [[file:./coding/1339_分裂二叉树的最大乘积.py][1339.分裂二叉树的最大乘积]]🉑️
-    * [[file:./coding/655_输出二叉树.org][655.输出二叉树]]
     * [[file:./coding/572_另一个🌲的子🌲.org][572.另一个🌲的子🌲]]
+    * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
+    * [[file:./coding/655_输出二叉树.org][655.输出二叉树]]
     * [[file:/coding/740_删除与获得点数.org][740.删除与获得点数]]
     * [[file:/coding/814_二叉树剪枝.org][814.二叉树剪枝✌️]]
     * [[file:./coding/968_监控二叉树.py][968.监控二叉树]]😭
+    * [[file:./coding/1339_分裂二叉树的最大乘积.py][1339.分裂二叉树的最大乘积]]🉑️
+    * [[file:./coding/1372_二叉树中的最长交错路径.py][1372.二叉树中的最长交错路径]]👖
     * [[file:./coding/面试题04.06.后继者.py][面试题04.06.后继者]]➕
     * [[file:./coding/面试题04.10.检查子树.py][面试题04.10.检查子树➕]]
     * [[file:./coding/🌲的子结构.org][🌲的字结构😭]]
@@ -225,6 +225,7 @@
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
      + [[file:/coding/16_最接近的三数之和.py][16.最接近的三数之和]]😁
+     + [[file:./coding/26_删除排序数组中的重复项.org][26. 删除排序数组中的重复项]]
      + [[file:./coding/160_相交链表.org][160.相交链表]]
      + [[file:./coding/234_回文链表.py][234.回文链表]]😼
      + [[file:./coding/283_移动零.py][283.移动零🐸]]
@@ -233,7 +234,6 @@
      + [[file:./coding/分割链表.org][分割链表]]
      + [[file:/coding/一次编辑.org][面试题_一次编辑]]
      + [[file:/coding/分割链表.org][面试题02.04.分割链表]]
-     + [[file:./coding/26_删除排序数组中的重复项.org][26. 删除排序数组中的重复项]]
      + [[file:/coding/部分排序.org][面试题16.16.部分排序]]
      + [[file:./coding/和为s的两个数字.py][和为s的两个数字➕]]
      + [[file:./coding/最长不含重复字符的子字符串.py][最长不含重复字符的子字符串➕]]
@@ -267,11 +267,11 @@
     * [[file:./coding/2_两数相加.py][2.两数相加]]😜
     * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
-    * [[file:./coding/面试题36_二叉搜索树与双向链表.py][面试题36. 二叉搜索树与双向链表]] 建议先导题：[[https://github.com/yechens/QiuZhao-ChongChongChong/blob/master/coding/94_%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E4%B8%AD%E5%BA%8F%E9%81%8D%E5%8E%86.py][二叉树的中序遍历]]➕
     * [[file:./coding/61_旋转链表.py][61.旋转链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
     * [[file:/coding/148_排序链表.py][148.排序链表]]
     * [[file:/coding/206_反转链表.org][206.反转链表]]
+    * [[file:./coding/面试题36_二叉搜索树与双向链表.py][面试题36. 二叉搜索树与双向链表]] 建议先导题：[[https://github.com/yechens/QiuZhao-ChongChongChong/blob/master/coding/94_%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E4%B8%AD%E5%BA%8F%E9%81%8D%E5%8E%86.py][二叉树的中序遍历]]➕
     * [[file:/coding/142_环形链表II.py][面试题_环路检测]]
     * [[file:./coding/面试题35复杂链表的复制.py][面试题35复杂链表的复制]]
     * [[file:./coding/两两交换链表节点.org][带指针的节点的翻转]]
@@ -281,8 +281,8 @@
     * [[file:/coding/133_克隆图.org][133.克隆图]]
     * [[file:/coding/199_二叉树的右视图.org][199.二叉树的右视图]]😁
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
-    * [[file:./coding/节点间通路.org][节点通路]]
     * [[file:./coding/886_可能的二分法.py][886.可能的二分法➕]]
+    * [[file:./coding/节点间通路.org][节点通路]]
 **** DFS
     * [[file:/coding/17_电话号码的字母组合.org][17.电话号码的字母组合]]
     * [[file:/coding/22_括号生成.org][22.括号生成]]😁
@@ -320,9 +320,9 @@
 **** 递归
     * [[file:./coding/29_两数相除.py][29.两数相除]]😢
     * [[file:./coding/638_大礼包.py][638.大礼包]]
+    * [[file:./coding/794_有效的井字游戏.py][794.有效的井字游戏👖]]
     * [[file:/coding/1140_石子游戏II.org][1140.石子游戏 II]]😭
     * [[file:./coding/1171_从链表中删去总和值为零的连续节点.py][1171.从链表中删去总和值为零的连续节点]]👀
-    * [[file:./coding/794_有效的井字游戏.py][794.有效的井字游戏👖]]
     * [[file:/coding/求和路径.org][面试题04.12.求和路径]]
     * [[file:./coding/树的子结构.py][树的子结构➕]]
 **** 回溯法
@@ -331,11 +331,11 @@
     * [[file:/coding/698_划分为k个相等的子集.org][698.划分为k个相等的子集]]🍺
     * [[file:./coding/组合总数.org][电话号码的组合系列]]
 **** 哈希表
-    * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
     * [[file:./coding/454_四数相加II.py][454.四数相加II]]➕
+    * [[file:/coding/982_按位与为零的三元组.org][982.按位与为零的三元组]]
 **** 分治
-    * [[file:/coding/395_至少有K个重复字符的最长子串.org][395.至少有K个重复字符的最长子串]]
     * [[file:./coding/312_戳气球.org][312. 戳气球😭]]
+    * [[file:/coding/395_至少有K个重复字符的最长子串.org][395.至少有K个重复字符的最长子串]]
     * [[file:/coding/493_翻转对.org][493.翻转对]]
 **** 并查集
     * [[file:./coding/399_除法求值.py][399.除法求值😭]]
@@ -364,11 +364,12 @@
     * [[file:/coding/和为s的连续正数序列.org][剑指Offer57-II.和为s的连续正数序列]]
 **** 其他
     * [[file:/coding/166_分数到小数.org][166.分数到小数]]
-    * [[file:/coding/326_3的幂.org][326.3的幂]]
     * [[file:./coding/220_存在重复元素III.py][220.存在重复元素III（桶）]]
+    * [[file:/coding/326_3的幂.org][326.3的幂]]
     * [[file:/coding/表示数值的字符串.org][剑指Offer20.表示数值的字符串]]
     * [[file:./coding/把数组排成最小的数.py][把数组排成最小的数]]➕
     * [[file:./coding/1～n整数中1出现的次数.py][1～n整数中1出现的次数]]
+**** [[https://github.com/yechens/QiuZhao-ChongChongChong/#%EF%B8%8Fleetcode%E5%88%B7%E9%A2%98%E7%AF%87][返回顶部]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
@@ -391,11 +392,10 @@
    | PCA                       | PCA                    |
    | VAE                       | VAE                    |
 *   TO_DO list
-   | 数学基础       | 6月 待安排 |
-   | 笔试题         | 6月 待安排 |
-   | ML比赛         | 待安排     |
-   | python高级编程 | 待安排     |
-   |                |            |
+   | 数学基础       | 待安排 |
+   | 笔试题         | 待安排 |
+   | ML比赛         | 待安排 |
+   | python高级编程 | 待安排 |
 *   面试必备系列
 ** ML/NLP 面经
 **** Todo
