--- a/README.org
+++ b/README.org
@@ -380,22 +380,19 @@
    | xgboost                   | 06/17 ~ 0623  |
    | 朴素贝叶斯                | 0615 ~ 0620   |
    | PCA                       | 0624~ 0631    |
-   | VAE                       | 0620~0731    |
+   | VAE                       | 0620~0731     |
+   |                           |               |
 ** 分享链接（专题笔记文件地址）
-   | topic                     | Link                   |
-   | SVM                       | [[file:./MachineLearning/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导]] |
-   | Word2Vec                  | [[file:./MachineLearning/Word2vec/word2vec.org][word2vec]]               |
-   | HMM&CRF                   | [[file:./MachineLearning/HMM&CRF/HMM&CRF_compressed.pdf][HMM&CRF]]                |
-   | DecisionTree+RandomForest | [[file:/MachineLearning/DecisionTree&RandomForest/tree.org][decisiontree]]           |
-   | xgboost                   | xgboost                |
-   | KMeans                    | [[file:/MachineLearning/KMeans/pytorch_手推KMeans.org][手推kmeans]]             |
-   | PCA                       | PCA                    |
-   | VAE                       | VAE                    |
-*   TO_DO list
-   | 数学基础       | 待安排 |
-   | 笔试题         | 待安排 |
-   | ML比赛         | 待安排 |
-   | python高级编程 | 待安排 |
+   | topic                     | Link                        |
+   | SVM                       | [[file:./机器学习算法/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导]]      |
+   | Word2Vec                  | [[file:./MachineLearning/Word2vec/word2vec.org][word2vec]]                    |
+   | HMM&CRF                   | [[file:./机器学习算法/HMM&CRF/HMM&CRF_compressed.pdf][HMM&CRF]]                     |
+   | DecisionTree+RandomForest | [[file:/机器学习算法/DecisionTree&RandomForest/tree.org][decisiontree]]                |
+   | xgboost                   | [[file:/机器学习算法/xgboost_gbdt/GBDTXGBoost常见问题.md][GBDTXGBoost常见问题]]]        |
+   | KMeans                    | [[file:/机器学习算法/KMeans/pytorch_手推KMeans.org][手推kmeans]]                  |
+   | LogisticRegression        | [[file:/机器学习算法/LogisticRegression/7分钟搞懂逻辑回归的来龙去脉.md][7分钟搞懂逻辑回归的来龙去脉]] |
+   | KNN                       | [[file:/机器学习算法/KNN/K近邻算法哪家强？KDTree、Annoy、HNSW原理和使用方法介绍.md][K近邻算法哪家强？]]           |
+   |                           |                             |
 *   面试必备系列
 ** ML/NLP 面经
 **** Todo
