update machine learning

--- a/机器学习算法/DecisionTree&RandomForest/认真的聊一聊决策树和随机森林.md
+++ b/机器学习算法/DecisionTree&RandomForest/认真的聊一聊决策树和随机森林.md
@@ -2,6 +2,10 @@
 
 ![认真的聊一聊决策树和随机森林](https://pic2.zhimg.com/v2-87e325fc57c04a8262f21948da8df16a_1440w.jpg)
 
+> 作者：Giant
+>
+> 来源：公众号【NLP情报局】
+
 随机森林是一种简单又实用的机器学习算法。
 
 **“随机“表示2种随机性，即每棵树的训练样本、训练特征随机选取。**
