--- a/机器学习算法/LogisticRegression/7分钟搞懂逻辑回归的来龙去脉.md
+++ b/机器学习算法/LogisticRegression/7分钟搞懂逻辑回归的来龙去脉.md
@@ -2,6 +2,10 @@
 
 ![7分钟搞懂逻辑回归的来龙去脉](https://pic3.zhimg.com/v2-bc7f88302e042231963590b8462bbb28_1440w.jpg?source=172ae18b)
 
+> 作者：Giant
+>
+> 来源：公众号【NLP情报局】
+
 逻辑回归（Logistic Regression）是一种统计机器学习方法，简单易用，却涉及很多知识点。正所谓麻雀虽小，五脏俱全。
 
 大多数教程都是从定义和原理出发，来讲解逻辑回归，容易显得晦涩难懂。本文将结合实例和图示，帮助读者在**7**分钟内搞懂逻辑回归算法。
