--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 *   Git加速插件：[[https://chrome.google.com/webstore/detail/github%E5%8A%A0%E9%80%9F/mfnkflidjnladnkldfonnaicljppahpg][GitHub加速😊]]
 * 🔧Emacs工具篇
-本项目内容开发及维护基于Emacs!
+本项目内容开发及维护以Emacs为主!
 ** 常用快捷键(ctrl-c; alt-m)
    | 功能                      | 快捷键                               |
    | 新建文件or打开文件        | c-x c-f                              |
@@ -385,13 +385,14 @@
 ** 分享链接（专题笔记文件地址）
    | topic                     | Link                         |
    | SVM                       | [[file:./机器学习算法/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导]]       |
-   | Word2Vec                  | [[file:./MachineLearning/Word2vec/word2vec.org][word2vec原理剖析]]                |
+   | Word2Vec                  | [[file:./MachineLearning/Word2vec/word2vec.org][word2vec原理剖析]]             |
    | HMM&CRF                   | [[file:./机器学习算法/HMM&CRF/HMM&CRF_compressed.pdf][HMM&CRF]]                      |
    | DecisionTree+RandomForest | [[file:/机器学习算法/DecisionTree&RandomForest/认真的聊一聊决策树和随机森林][认真的聊一聊决策树和随机森林]] |
    | xgboost                   | [[file:/机器学习算法/xgboost_gbdt/GBDTXGBoost常见问题.md][GBDTXGBoost常见问题]]          |
    | KMeans                    | [[file:/机器学习算法/KMeans/pytorch_手推KMeans.org][手推kmeans]]                   |
    | LogisticRegression        | [[file:/机器学习算法/LogisticRegression/7分钟搞懂逻辑回归的来龙去脉.md][7分钟搞懂逻辑回归的来龙去脉]]  |
    | KNN                       | [[file:/机器学习算法/KNN/K近邻算法哪家强？KDTree、Annoy、HNSW原理和使用方法介绍.md][K近邻算法哪家强？]]            |
+   | NaiveBayes                | [[file:/机器学习算法/NaiveBayes/带你理解朴素贝叶斯分类算法.md][带你理解朴素贝叶斯分类算法]]   |
    |                           |                              |
 *   面试必备系列
 ** ML/NLP 面经
