--- a/机器学习算法/NaiveBayes/带你理解朴素贝叶斯分类算法.md
+++ b/机器学习算法/NaiveBayes/带你理解朴素贝叶斯分类算法.md
@@ -10,7 +10,7 @@
 
 ## **分类问题综述**
 
-**对于分类问题，其实谁都不会陌生，日常生活中我们每天都进行着分类过程。**例如，当你看到一个人，你的脑子下意识判断他是学生还是社会上的人；你可能经常会走在路上对身旁的朋友说“这个人一看就很有钱、”之类的话，其实这就是一种分类操作。
+**对于分类问题，其实谁都不会陌生，日常生活中我们每天都进行着分类过程**。例如，当你看到一个人，你的脑子下意识判断他是学生还是社会上的人；你可能经常会走在路上对身旁的朋友说“这个人一看就很有钱、”之类的话，其实这就是一种分类操作。
 
 既然是贝叶斯分类算法，那么**分类的数学描述**又是什么呢？
 
