--- a/README.org
+++ b/README.org
@@ -400,6 +400,7 @@
    | [[file:/大厂面试锦囊/腾讯、百度、滴滴最新NLP算法面经.md][腾讯、百度、滴滴最新NLP算法面经]]              |
    | [[file:/大厂面试锦囊/2021算法阿里&腾讯&快手上岸，菜鸟小硕经验分享.md][2021算法阿里&腾讯&快手上岸，菜鸟小硕经验分享]] |
    | [[file:/大厂面试锦囊/NLP_AI面试全记录_最全预训练总结.md][NLP_AI面试全记录_最全预训练总结]]              |
+   | [[file:/大厂面试锦囊/2021校招算法面试锦囊_华为_网易游戏.md][2021校招算法面试锦囊_华为_网易游戏]]           |
    |                                              |
 ** 知识点归纳整理
 | 主题               | 标题                                                     | 来源        | 传送门 |
@@ -415,3 +416,6 @@
 | Word2vec                 | word2vec Parameter Learning Explained | arxiv    | 详细推导和解释word2vec模型的参数更新公式(CBOW/SG) |
 | semi-supervised learning | [[https://arxiv.org/pdf/1904.12848.pdf][UDA]]                                   | CVPR2019 | 图片和文本的半监督数据增强及训练                  |
 |                          |                                       |          |                                                   |
+|                          |                                       |          |                                                   |
+
+内容持续更新中，欢迎关注！
