--- a/coding/1_两数之和.org
+++ b/coding/1_两数之和.org
@@ -37,7 +37,7 @@
 + 暴力：O(n**3)
 + 双指针优化：类似于两数之和的解法，只不过这里a+b=-c；可以知道a,b,c中至少有一个是负数，可以利用这个特性对遍历进行优化。
 
-首先对nums排序，遍历nums的元素为c，则为了不出现重复的元素，在c右边的元素中寻找剩下a和b，这里就用双指针法寻找a和b，需要注意的是，会存在相同的元素，因此需要用while跳过相同的元素，为了在跳过相同元素时不越界，left必须<right-1。在第一层循环中，需要保证c<=0，因为a<=b<=c，如果a>0则不可能存在和为0
+首先对nums排序，遍历nums的元素为c，则为了不出现重复的元素，在c右边的元素中寻找剩下a和b，这里就用双指针法寻找a和b，需要注意的是，会存在相同的元素，因此需要用while跳过相同的元素，为了在跳过相同元素时不越界，left必须<right-1。在第一层循环中，需要保证c<=0，因为c<=a<=b，如果c>0则不可能存在三数和为0
 ** code
 #+BEGIN_SRC python
 # 双指针优化-O(n**2)
